Correct grammar, spelling and other typos in index.html.

--- a/index.html
+++ b/index.html
@@ -218,22 +218,22 @@
       <p>*Each of your answers was assigned a value. These values were added together when you submitted your form, resulting in your score above!</p>
       <div class="python">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning, and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>), currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. Not bad!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>) it currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. Not bad <span class="user-name"></span>!</p>
       </div>
 
       <div class="ruby">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative, program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use because it's an excellent language for quickly building out projects. Give it a try!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative. Program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use this language because it's excellent for quickly building out projects. Give it a try <span class="user-name"></span>!</p>
       </div>
 
       <div class="swift">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're an fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. Welcome to the future!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're a fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. Welcome to the future <span class="user-name"></span>!</p>
       </div>
 
       <div class="csharp">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used, and has been around for a long time. That means there's lots of documentation out there, lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, salaries range from $76,309 to $132,322. Good luck!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used and has been around for a long time. That means there's lots of documentation out there, or in other words lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, C# developer salaries ranged from $76,309 to $132,322. Good luck <span class="user-name"></span>!</p>
       </div>
     </div>
   </div>
