Delete project-objectives file, make adjustments to phrasing, em and strong tags in index.html, change font family of prompt to enter name.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="container">
     <header>
       <h1>Choose A Language</h1>
-      <p>Are you interested in beginning to program, but overwhelmed by the many different programming languages to choose from? Well don't worry, you're not alone. With so many options, it's hard to know where to start, but don't worry! After you answer a few questions, we'll be able to determine which programming language might be the right one for you!</p>
-      <p>Just a note: Many languages use similar syntax, meaning that once you've learned one, it will be easier to pick up another. So it's not too important which one you choose. What matters most is that you pick one and get started. Good luck!</p>
+      <p>Are you interested in beginning to program, but overwhelmed by the many different programming languages to choose from? Well don't worry, you're not alone. With so many options, it's hard to know where to start, but we're here to help! After you answer a few questions, we'll be able to determine which programming language might be the right one for you!</p>
+      <p>Just a note: Many languages use similar syntax, meaning that once you've learned one, it will be easier to pick up another. So it's not too important which one you choose. What matters most is that you pick one and get started.</p>
     </header>
     <div class="quiz">
       <form action="#" id="quiz-form">
@@ -25,7 +25,7 @@
             <input type="text" id="first-name" class="form-control" required>
           </div>
         </div>
-        <p>*You must select one answer for each question in order to submit the form.</p>
+        <p>*You <em>must</em> select one answer for <em>each</em> of the questions below in order to submit the form.</p>
         <div class="row">
           <div class="col-md-4 col-sm-12">
             <h3>Question #1</h3>
@@ -89,7 +89,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="occupation" value="2">
-                c) A private eye (detective)
+                c) A private-eye (detective)
               </label>
             </div>
           </div>
@@ -119,7 +119,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <h3>Question #5</h3>
-            <p>What is your favorite music group from the 90s?</p>
+            <p>Which is your favorite music group from the 90s?</p>
             <div class="radio">
               <label>
                 <input type="radio" name="music-group" value="0" required>
@@ -215,25 +215,25 @@
 
     <div id="results">
       <h3>Your score: <span class="score"></span></h3>
-      <p>*Each of your answers was <em>assigned a value</em>. These values were added together when you submitted your form, resulting in your score above!</p>
+      <p>*Each of your answers was assigned a value. These values were added together when you submitted your form, resulting in your score above!</p>
       <div class="python">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>) it currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. <strong>Not bad</strong> <span class="user-name"></span>!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with Python. Python is commonly used in Machine Learning and according to some resources (see a related <a href="https://www.codeplatoon.org/the-best-paying-and-most-in-demand-programming-languages-in-2019/" target="_blank">article by Code Platoon</a>) it currently has the highest number of job openings. Salary for Python developers tends to be more than reasonable, too. <strong>Not bad <span class="user-name"></span>!</strong></p>
       </div>
 
       <div class="ruby">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative. Program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use this language because it's excellent for quickly building out projects. <strong>Give it a try</strong> <span class="user-name"></span>!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with Ruby. Have you heard of Arduino or Raspberry Pi? Ruby is used to make apps for both of them. You can get creative. Program your Arduino to run a timer to feed your cat, or to run a security camera to make sure the neighborhood children aren't stealing your tomatoes. While there are fewer job listings for Ruby, startups often use this language because it's excellent for quickly building out projects. <strong>Give it a try <span class="user-name"></span>!</strong></p>
       </div>
 
       <div class="swift">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're a fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. <strong>Welcome to the future</strong> <span class="user-name"></span>!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with Swift. Swift is used for macOS and iOS development, so if you're a fan of the iPhone, Swift may be right up your alley. Swift is often referred to as an "interactive" programming language and is considered modern as well as more beginner friendly. <strong>Welcome to the future <span class="user-name"></span>!</strong></p>
       </div>
 
       <div class="csharp">
         <h3><span class="user-name"></span>,</h3>
-        <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used and has been around for a long time. That means there's lots of documentation out there, or in other words lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, C# developer salaries ranged from $76,309 to $132,322. <strong>Good luck</strong> <span class="user-name"></span>!</p>
+        <p>Based on your score, our algorithm has determined that you should begin with C#. If you are a fan of Windows development, C# is the way to go. This language is widely used and has been around for a long time. That means there's lots of documentation out there, or in other words lots of resources to guide you through your C# journey. And according to Indeed in March of 2020, C# developer salaries ranged from $76,309 to $132,322. <strong>Good luck <span class="user-name"></span>!</strong></p>
       </div>
     </div>
   </div>
